--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,8 @@
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
+Debug/
+Release/
+agg-2.4
+*.opensdf
+*.sdf
+*.suo
+*.user
+test_*.ppm
